force-app/main/default/objects/Contact/fields/ac_account_12m_sales__c.field-meta.xml
<CustomField>
    <fullName>ac_account_12m_sales__c</fullName>
    <formula>Account.Sales_12_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ac_account_12m_sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>