force-app/main/default/objects/Contact/fields/ac_account_name__c.field-meta.xml
<CustomField>
    <fullName>ac_account_name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ac_account_name</label>
    <type>Text</type>
</CustomField>