force-app/main/default/objects/Contact/fields/ac_account_owner_email__c.field-meta.xml
<CustomField>
    <fullName>ac_account_owner_email__c</fullName>
    <formula>Account.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ac_account_owner_email</label>
    <type>Text</type>
</CustomField>