force-app/main/default/objects/Contact/fields/ac_account_owner_name__c.field-meta.xml
<CustomField>
    <fullName>ac_account_owner_name__c</fullName>
    <formula>Account.Owner.FirstName + &apos; &apos; +  Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ac_account_owner_name</label>
    <type>Text</type>
</CustomField>