force-app/main/default/objects/Contact/fields/AC_JHSC_Exp_Opt_Out_Emails__c.field-meta.xml
<CustomField>
    <fullName>AC_JHSC_Exp_Opt_Out_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AC - JHSC Exp Opt Out Emails</label>
    <type>Checkbox</type>
</CustomField>