force-app/main/default/objects/Contact/fields/Account_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_City__c</fullName>
    <description>Capture Account Billing City</description>
    <formula>Account.Primary_Billing_Address__r.City1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates Account Billing City</inlineHelpText>
    <label>Account Billing City</label>
    <type>Text</type>
</CustomField>