force-app/main/default/objects/Contact/fields/Account_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Postal_Code__c</fullName>
    <description>Capture Account Billing Postal Code</description>
    <formula>Account.Primary_Billing_Address__r.Postal_Code1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates Account Billing Postal Code</inlineHelpText>
    <label>Account Billing Postal Code</label>
    <type>Text</type>
</CustomField>