force-app/main/default/objects/Contact/fields/Account_Billing_Province__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Province__c</fullName>
    <description>Capture Account Billing Province</description>
    <formula>Account.Primary_Billing_Address__r.Province1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates Account Billing Province</inlineHelpText>
    <label>Account Billing Province</label>
    <type>Text</type>
</CustomField>