force-app/main/default/objects/Contact/fields/Account_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Street__c</fullName>
    <description>Captures Account Billing Street</description>
    <formula>Account.Primary_Billing_Address__r.Address1_1__c +  &apos; &apos; + Account.Primary_Billing_Address__r.Address1_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates Account Billing Street</inlineHelpText>
    <label>Account Billing Street</label>
    <type>Text</type>
</CustomField>