force-app/main/default/objects/Contact/fields/Account_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Contact_Email__c</fullName>
    <formula>Account.Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Primary Contact Email</label>
    <type>Text</type>
</CustomField>