force-app/main/default/objects/Contact/fields/Account_Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Contact_Name__c</fullName>
    <formula>Account.Primary_Contact__r.FirstName + &apos; &apos; + Account.Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Primary Contact Name</label>
    <type>Text</type>
</CustomField>