force-app/main/default/objects/Contact/fields/Account_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_Address__c</fullName>
    <formula>Account.Primary_Shipping_Address__r.Address1_1__c +  &apos; &apos; + Account.Primary_Shipping_Address__r.Address1_2__c + &apos;, &apos; 
+  Account.Primary_Shipping_Address__r.City1__c + &apos;, &apos; 
+  Account.Primary_Shipping_Address__r.Province1__c + &apos;, &apos; 
+  Account.Primary_Shipping_Address__r.Postal_Code1__c + &apos;, &apos; 
+  Account.Primary_Shipping_Address__r.Country1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Shipping Address</label>
    <type>Text</type>
</CustomField>