force-app/main/default/objects/Contact/fields/certificate_count__c.field-meta.xml
<CustomField>
    <fullName>certificate_count__c</fullName>
    <label>Certificate Count</label>
    <summaryForeignKey>Certificate__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>