force-app/main/default/objects/Contact/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <description>Capture Account Number</description>
    <formula>Account.Client_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indiactes Account Number</inlineHelpText>
    <label>Company ID</label>
    <type>Text</type>
</CustomField>