force-app/main/default/objects/Contact/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Capture Account Name</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicate Account Name</inlineHelpText>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>