force-app/main/default/objects/Contact/fields/Confirmed_Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Attendee_Count__c</fullName>
    <label>Confirmed Attendee Count</label>
    <summaryFilterItems>
        <field>Attendee__c.Confirmed__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendee__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>