force-app/main/default/objects/Contact/fields/Consent_Form_Filled__c.field-meta.xml
<CustomField>
    <fullName>Consent_Form_Filled__c</fullName>
    <formula>IF(
AND(
 NOT(ISBLANK(MailingStreet)),
 NOT(ISBLANK(MailingPostalCode)),
 NOT(ISBLANK(MailingCity)),
 NOT(ISBLANK(MailingState)),
 NOT(ISBLANK(MailingCountry)),
 NOT(ISBLANK(Personal_Email__c)),
 NOT(ISBLANK(Date_Of_Birth__c))
),
True,
False
)</formula>
    <label>Consent Form Filled</label>
    <type>Checkbox</type>
</CustomField>