force-app/main/default/objects/Contact/fields/Copy_Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_Account_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, will use the account billing address when creating a new contact</inlineHelpText>
    <label>Copy Account Billing Address</label>
    <type>Checkbox</type>
</CustomField>