force-app/main/default/objects/Contact/fields/Duplicate_Review__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Review</label>
    <type>Checkbox</type>
</CustomField>