force-app/main/default/objects/Contact/fields/Email_Address_Owner_Score__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_Owner_Score__c</fullName>
    <formula>1+
if(isblank(unique_email__c), 0, 100000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_Address_Owner_Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>