force-app/main/default/objects/Contact/fields/Evaluation_Count__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Count__c</fullName>
    <label>Evaluation Count</label>
    <summaryForeignKey>Evaluation__c.Attendee_Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>