force-app/main/default/objects/Contact/fields/Fastcall_Label__c.field-meta.xml
<CustomField>
    <fullName>Fastcall_Label__c</fullName>
    <description>Used to show additional text in the fastcall contact lookup</description>
    <label>Fastcall Label</label>
    <length>150</length>
    <type>Text</type>
</CustomField>