force-app/main/default/objects/Contact/fields/Full_ContactId__c.field-meta.xml
<CustomField>
    <fullName>Full_ContactId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full_ContactId</label>
    <type>Text</type>
</CustomField>