force-app/main/default/objects/Contact/fields/Full_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Full_Mobile__c</fullName>
    <formula>If(
ISBLANK( MobilePhone ),
&apos;&apos;,
MID(MobilePhone, 0, 3) + &apos;-&apos; + MID(MobilePhone, 4, 3) + &apos;-&apos; + MID(MobilePhone, 7, 4)
)</formula>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>