force-app/main/default/objects/Contact/fields/Full_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Full_Telephone__c</fullName>
    <description>Concatenation of Telephone and Phone Ext # for this Contact.</description>
    <formula>If(isblank(Phone),
&apos;&apos;,
IF(
or(isblank(Phone_Ext__c), TEXT( Phone_Ext__c ) == &apos;0&apos;),
MID(Phone, 0, 3) + &apos;-&apos; + MID(Phone, 4, 3) + &apos;-&apos; + MID(Phone, 7, 4),
MID(Phone, 0, 3) + &apos;-&apos; + MID(Phone, 4, 3) + &apos;-&apos; + MID(Phone, 7, 4) + &quot;;&quot; +  TEXT( Phone_Ext__c )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Concatenation of Telephone and Extension # for this Contact.</inlineHelpText>
    <label>Phone</label>
    <type>Text</type>
</CustomField>