force-app/main/default/objects/Contact/fields/Has_Valid_Data__c.field-meta.xml
<CustomField>
    <fullName>Has_Valid_Data__c</fullName>
    <formula>IF(
OR(
UPPER(FirstName) = &quot;TBA&quot;,
UPPER(LastName) = &quot;TBA&quot;,
UPPER(FirstName) = &quot;TBD&quot;,
UPPER(LastName) = &quot;TBD&quot;,
UPPER(FirstName) = &quot;ZZ&quot;,
UPPER(LastName) = &quot;ZZ&quot;,
LEN(FirstName) = 1, 
LEN(LastName) = 1

,
and(
OR(
ISBLANK(Email),
ISBLANK(Phone),
LEN(Phone) &lt; 10
),
OR(
Is_Primary__c = true,
Is_Invoice__c = true
)
)

),
FALSE,
TRUE
)</formula>
    <label>Has Valid Data</label>
    <type>Checkbox</type>
</CustomField>