force-app/main/default/objects/Contact/fields/Hashed_Password__c.field-meta.xml
<CustomField>
    <fullName>Hashed_Password__c</fullName>
    <description>Used with OSG Online</description>
    <label>Hashed Password</label>
    <length>64</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>