force-app/main/default/objects/Contact/fields/Identity_Verified__c.field-meta.xml
<CustomField>
    <fullName>Identity_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if a contact has had their identity verified by a person (Required for DLIH JHSC courses)</description>
    <label>Identity Verified</label>
    <type>Checkbox</type>
</CustomField>