force-app/main/default/objects/Contact/fields/Ignore_JHSCII_R_Cert_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Ignore_JHSCII_R_Cert_Expiration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore JHSCII/R Cert Expiration</label>
    <type>Checkbox</type>
</CustomField>