force-app/main/default/objects/Contact/fields/Is_Fastcall_Label_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Fastcall_Label_Correct__c</fullName>
    <formula>If(
 FullName__c + &apos; - &apos; + LEFT(Account.Name, 90) + &apos;(&apos; + Account.Client_ID__c + &apos;)&apos; = Fastcall_Label__c,
true,
false)</formula>
    <label>Is Fastcall Label Correct</label>
    <type>Checkbox</type>
</CustomField>