force-app/main/default/objects/Contact/fields/Is_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Is_Invoice__c</fullName>
    <formula>if(
AND(
NOT(ISBLANK(Account.Invoice_Contact__c)),
Id = Account.Invoice_Contact__c
),
true,
false)</formula>
    <label>Is Invoice</label>
    <type>Checkbox</type>
</CustomField>