force-app/main/default/objects/Contact/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <formula>if(
AND(
NOT(ISBLANK(Account.Primary_Contact__c)),
Id = Account.Primary_Contact__c
),
true,
false)</formula>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>