force-app/main/default/objects/Contact/fields/Number_of_UUID_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_UUID_Attendees__c</fullName>
    <label>Number of UUID Attendees</label>
    <summaryFilterItems>
        <field>Attendee__c.UUID__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Attendee__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>