force-app/main/default/objects/Contact/fields/Primary_Email_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Email Contact</label>
    <type>Checkbox</type>
</CustomField>