force-app/main/default/objects/Contact/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>/*
&apos;&apos;
*/

if(
OR(
NOT(ISBLANK( Username__c )),
NOT(ISBLANK( OsgOnline_Id__c )),
NOT(ISBLANK( Date_Of_Birth__c ))
),
&quot;Can&apos;t delete this contact!&quot;,
&apos;&apos;)</formula>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>