force-app/main/default/objects/Contact/fields/sig_name__c.field-meta.xml
<CustomField>
    <fullName>sig_name__c</fullName>
    <label>sig_name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>