force-app/main/default/objects/Contact/fields/sig_phone__c.field-meta.xml
<CustomField>
    <fullName>sig_phone__c</fullName>
    <label>sig_phone</label>
    <length>128</length>
    <type>Text</type>
</CustomField>