force-app/main/default/objects/Contact/fields/sig_phone_match__c.field-meta.xml
<CustomField>
    <fullName>sig_phone_match__c</fullName>
    <formula>sig_phone__c = Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sig_phone_match</label>
    <type>Checkbox</type>
</CustomField>