force-app/main/default/objects/Contact/fields/sig_phone_work__c.field-meta.xml
<CustomField>
    <fullName>sig_phone_work__c</fullName>
    <label>sig_phone_work</label>
    <length>128</length>
    <type>Text</type>
</CustomField>