force-app/main/default/objects/Contact/fields/sig_title__c.field-meta.xml
<CustomField>
    <fullName>sig_title__c</fullName>
    <label>sig_title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>