force-app/main/default/objects/Contact/fields/unique_email__c.field-meta.xml
<CustomField>
    <fullName>unique_email__c</fullName>
    <label>Unique Email</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>