force-app/main/default/objects/Contact/fields/unique_email_md5__c.field-meta.xml
<CustomField>
    <fullName>unique_email_md5__c</fullName>
    <label>unique_email_md5</label>
    <length>32</length>
    <type>Text</type>
</CustomField>