force-app/main/default/objects/Contact/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Used with OSG Online</description>
    <label>Username</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>