force-app/main/default/objects/Contact/recordTypes/Attendee_Contact.recordType-meta.xml
<RecordType>
    <fullName>Attendee_Contact</fullName>
    <active>true</active>
    <description>Used to capture client attendee contacts.</description>
    <label>Contact</label>
</RecordType>