force-app/main/default/objects/Contact/validationRules/Account_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorMessage>Contact cannot exist without associating it with an account!</errorMessage>
</ValidationRule>