force-app/main/default/objects/Contact/validationRules/Account_Cannot_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Cannot_Be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( AccountId ),
$User.Id != &apos;00546000000ufVc&apos;,
$User.Id != &apos;00546000000uP7f&apos;
)</errorConditionFormula>
    <errorMessage>Account cannot be changed on contact!</errorMessage>
</ValidationRule>