force-app/main/default/objects/Contact/validationRules/Cannot_Change_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(AccountId),
 $User.Id != &apos;00546000001efkf&apos;, /*Sandy*/
 $User.Id != &apos;00546000000ufVc&apos;,
 $User.Id != &apos;00546000000uP7f&apos;
)</errorConditionFormula>
    <errorMessage>You cannot change the account of a contact! Contact your administrator</errorMessage>
</ValidationRule>