force-app/main/default/objects/Contact/validationRules/Date_of_Birth_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
(YEAR(TODAY()) - YEAR(Date_Of_Birth__c)) &lt; 13
)</errorConditionFormula>
    <errorMessage>Date of birth year is invalid!</errorMessage>
</ValidationRule>