force-app/main/default/objects/Contact/validationRules/Fields_To_Not_Use.validationRule-meta.xml
<ValidationRule>
    <fullName>Fields_To_Not_Use</fullName>
    <active>true</active>
    <errorConditionFormula>or (
!isblank(text(Salutation) )
)</errorConditionFormula>
    <errorMessage>Do not use Salutation.</errorMessage>
</ValidationRule>