force-app/main/default/objects/Contact/validationRules/Invalid_Primary.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Primary</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Is_Primary__c ),
Is_Primary__c = true,
 Has_Valid_Data__c = false
)</errorConditionFormula>
    <errorMessage>Contact cannot be primary until all data is valid! (Name, Email, Phone)</errorMessage>
</ValidationRule>