force-app/main/default/objects/Contact/validationRules/Keep_Fields_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Keep_Fields_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
 ISCHANGED(Salutation),
 NOT(ISBLANK(TEXT(Salutation)))
)
)</errorConditionFormula>
    <errorMessage>Salutation must be kept blank!</errorMessage>
</ValidationRule>