force-app/main/default/objects/Contact/validationRules/Mobile_Number_Regex.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Regex</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
/*ISCHANGED( MobilePhone ),*/
$User.Id != &apos;00546000000u1Pz&apos;, /*OSG Integration*/
$User.Id != &apos;00546000000uP7f&apos;, /*Greg*/
$User.Id != &apos;00546000000ufVc&apos;, /*Blessen*/
NOT(ISBLANK(MobilePhone)),
NOT(
REGEX(
MobilePhone,
/*&quot;\\A((\\1-)?([1][\\s])?([\\(]([0-9]{3})[\\)][\\s]|([1][\\-])?([0-9]{3})[\\-])([0-9]{3})[\\-]([0-9]{4}))\\z&quot;*/
&quot;^[0-9]{3}[0-9]{3}[0-9]{4}$&quot;
)
)
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>The mobile phone number is not in a valid format.
Ex. 1231231234</errorMessage>
</ValidationRule>