force-app/main/default/objects/Contact/validationRules/Name_Invalid_Regex.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Invalid_Regex</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(FirstName)),
NOT(ISBLANK(LastName)),
Id != &apos;0038Z00002wEyIz&apos;,
OR(
NOT(REGEX( FirstName, &quot;^[a-zA-ZÀ-Ÿ-&apos;`. ]+$&quot;)),
NOT(REGEX( LastName, &quot;^[a-zA-ZÀ-Ÿ-&apos;`. ]+$&quot;))
),
$User.Id != &apos;00546000000u1Pz&apos; /*OSG Integration*/
/*$User.Id != &apos;00546000000uP7f&apos;, Greg*/
/*$User.Id != &apos;00546000000ufVc&apos; Blessen*/
)</errorConditionFormula>
    <errorMessage>Names can only contain letters, hyphens, accents and apostrophes!</errorMessage>
</ValidationRule>