force-app/main/default/objects/Contact/validationRules/Name_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_required</fullName>
    <active>true</active>
    <description>First and Last name required for Contacts.</description>
    <errorConditionFormula>OR(
ISBLANK(FirstName),
ISBLANK(LastName)
)</errorConditionFormula>
    <errorMessage>First or Last name cannot be blank.</errorMessage>
</ValidationRule>