force-app/main/default/objects/Contact/validationRules/OsgOnline_Email_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>OsgOnline_Email_Requirement</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( OsgOnline_Id__c )),
ISCHANGED( Email ),
ISBLANK( Email )
)</errorConditionFormula>
    <errorMessage>Once a contact has been synced with OsgOnline it requires an email! Contact your administrator</errorMessage>
</ValidationRule>