force-app/main/default/objects/Contact/validationRules/Phone_and_Mobile_Phone_are_the_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_and_Mobile_Phone_are_the_same</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Phone = MobilePhone,
NOT(ISBLANK(Phone)),
NOT(ISBLANK(MobilePhone))
)</errorConditionFormula>
    <errorMessage>Phone and Mobile Phone are the same.</errorMessage>
</ValidationRule>