force-app/main/default/objects/Contact/validationRules/PhoneExtInvalid.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneExtInvalid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Phone_Ext__c)),
Phone_Ext__c &lt;0
)</errorConditionFormula>
    <errorDisplayField>Phone_Ext__c</errorDisplayField>
    <errorMessage>Invalid Phone Extension. Use only numbers greater or equal than 0</errorMessage>
</ValidationRule>