force-app/main/default/objects/Contact/validationRules/PhoneExtWithoutPhoneNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneExtWithoutPhoneNumber</fullName>
    <active>true</active>
    <errorConditionFormula>!isBlank(Phone_Ext__c) &amp;&amp;  isBlank(Phone)</errorConditionFormula>
    <errorMessage>Phone extension used with a missing phone number.</errorMessage>
</ValidationRule>